--- a/index.html
+++ b/index.html
@@ -8,6 +8,75 @@
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
 <body>
-	<!-- Content for index.html will be generated here -->
+	<!-- Header -->
+	<header class="bg-white shadow-md">
+		<nav class="container mx-auto py-4 px-6">
+			<div class="flex items-center justify-between">
+				<a href="index.html" class="text-2xl font-bold text-gray-800">Coastal Escape</a>
+				<div class="space-x-6">
+					<a href="index.html" class="text-gray-600 hover:text-blue-500">Home</a>
+					<a href="destinations.html" class="text-gray-600 hover:text-blue-500">Destinations</a>
+					<a href="packages.html" class="text-gray-600 hover:text-blue-500">Packages</a>
+					<a href="blog.html" class="text-gray-600 hover:text-blue-500">Blog</a>
+					<a href="contact.html" class="text-gray-600 hover:text-blue-500">Contact</a>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<!-- Hero Section -->
+	<section class="bg-blue-100 py-20">
+		<div class="container mx-auto px-6 text-center">
+			<h1 class="text-4xl font-bold text-gray-800 mb-4">Discover Your Dream Coastal Getaway</h1>
+			<p class="text-lg text-gray-700 mb-8">Explore stunning beaches, luxurious resorts, and unforgettable adventures.</p>
+			<a href="destinations.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-full">Explore Destinations</a>
+		</div>
+		<div class="container mx-auto mt-8">
+			<img src="https://picsum.photos/800/400" alt="Coastal Landscape" class="rounded-lg shadow-md">
+		</div>
+	</section>
+
+	<!-- Featured Destinations -->
+	<section class="py-16">
+		<div class="container mx-auto px-6">
+			<h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Featured Destinations</h2>
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+				<!-- Destination 1 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img src="https://picsum.photos/600/400" alt="Destination 1" class="w-full h-48 object-cover">
+					<div class="p-4">
+						<h3 class="text-xl font-semibold text-gray-800 mb-2">Santorini, Greece</h3>
+						<p class="text-gray-700">Experience the breathtaking sunsets and iconic white-washed villages of Santorini. Indulge in delicious Mediterranean cuisine and explore ancient ruins.</p>
+						<a href="#" class="text-blue-500 hover:text-blue-700 mt-4 inline-block">Learn More</a>
+					</div>
+				</div>
+
+				<!-- Destination 2 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img src="https://picsum.photos/600/401" alt="Destination 2" class="w-full h-48 object-cover">
+					<div class="p-4">
+						<h3 class="text-xl font-semibold text-gray-800 mb-2">Maldives</h3>
+						<p class="text-gray-700">Discover the pristine beaches, crystal-clear waters, and vibrant coral reefs of the Maldives. Perfect for snorkeling, diving, and relaxation.</p>
+						<a href="#" class="text-blue-500 hover:text-blue-700 mt-4 inline-block">Learn More</a>
+					</div>
+				</div>
+
+				<!-- Destination 3 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img src="https://picsum.photos/600/402" alt="Destination 3" class="w-full h-48 object-cover">
+					<div class="p-4">
+						<h3 class="text-xl font-semibold text-gray-800 mb-2">Bali, Indonesia</h3>
+						<p class="text-gray-700">Immerse yourself in the rich culture, lush landscapes, and stunning beaches of Bali. Visit ancient temples, enjoy yoga retreats, and surf the famous waves.</p>
+						<a href="#" class="text-blue-500 hover:text-blue-700 mt-4 inline-block">Learn More</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer class="bg-gray-800 py-8 text-white text-center">
+		<p>&copy; 2024 Coastal Escape. All rights reserved.</p>
+	</footer>
 </body>
 </html>
