feat: Create the complete HTML structure and layout for destinations.html, showcasing different coastal destinations with images and descriptions.

--- a/destinations.html
+++ b/destinations.html
@@ -3,11 +3,134 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>Coastal_Escape_Travel</title>
+	<title>Coastal_Escape_Travel - Destinations</title>
 	<script src='https://cdn.tailwindcss.com'></script>
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
 <body>
-	<!-- Content for destinations.html will be generated here -->
+	<!-- Navigation Bar -->
+	<nav class="bg-white shadow-md">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="flex justify-between h-16">
+				<div class="flex">
+					<div class="flex-shrink-0 flex items-center">
+						<a href="index.html" class="text-xl font-bold text-gray-800">Coastal Escape</a>
+					</div>
+					<div class="hidden md:ml-6 md:flex md:items-center space-x-4">
+						<a href="index.html" class="text-gray-500 hover:bg-gray-100 hover:text-gray-700 px-3 py-2 rounded-md text-sm font-medium">Home</a>
+						<a href="destinations.html" class="bg-gray-100 text-gray-700 px-3 py-2 rounded-md text-sm font-medium">Destinations</a>
+						<a href="packages.html" class="text-gray-500 hover:bg-gray-100 hover:text-gray-700 px-3 py-2 rounded-md text-sm font-medium">Packages</a>
+						<a href="blog.html" class="text-gray-500 hover:bg-gray-100 hover:text-gray-700 px-3 py-2 rounded-md text-sm font-medium">Blog</a>
+						<a href="contact.html" class="text-gray-500 hover:bg-gray-100 hover:text-gray-700 px-3 py-2 rounded-md text-sm font-medium">Contact</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Destinations Section -->
+	<section class="py-12 bg-gray-50">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="text-center">
+				<h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
+					Explore Our Coastal Destinations
+				</h2>
+				<p class="mt-3 max-w-2xl mx-auto text-xl text-gray-500 sm:mt-4">
+					Discover the beauty and serenity of the world's most stunning coastlines.
+				</p>
+			</div>
+
+			<div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+				<!-- Destination 1 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/600" alt="Coastal Destination 1">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Santorini, Greece</h3>
+						<p class="mt-2 text-gray-600">
+							Santorini is one of the Cyclades islands in the Aegean Sea. It was devastated by a volcanic eruption in the 16th century BC, forever shaping its rugged landscape. The whitewashed, cubiform houses of its 2 principal towns, Fira and Oia, cling to cliffs above an underwater caldera (crater).
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+
+				<!-- Destination 2 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/601" alt="Coastal Destination 2">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Maui, Hawaii</h3>
+						<p class="mt-2 text-gray-600">
+							Maui, known also as “The Valley Isle,” is the second largest Hawaiian island. The island is known for its stunning beaches, including the world-famous Ka'anapali Beach, as well as its volcanic landscape and the dormant volcano Haleakala.
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+
+				<!-- Destination 3 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/602" alt="Coastal Destination 3">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Amalfi Coast, Italy</h3>
+						<p class="mt-2 text-gray-600">
+							The Amalfi Coast is a 50-kilometer stretch of coastline along the southern edge of Italy’s Sorrentine Peninsula, in the Campania region. It's a popular holiday destination, with steep cliffs and a jagged shoreline dotted with small beaches and pastel-colored fishing villages.
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+
+				<!-- Destination 4 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/603" alt="Coastal Destination 4">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Bali, Indonesia</h3>
+						<p class="mt-2 text-gray-600">
+							Bali, known as the "Island of Gods," is an Indonesian island known for its natural beauty, from the iconic rice paddies to beaches and coral reefs. Offshore, the Nusa islands offer scuba diving and snorkeling sites.
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+
+				<!-- Destination 5 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/604" alt="Coastal Destination 5">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Sydney, Australia</h3>
+						<p class="mt-2 text-gray-600">
+							Sydney, capital of New South Wales, is one of Australia’s largest cities and is best known for its harbor front Sydney Opera House, with a distinctive sail-like design.
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+
+				<!-- Destination 6 -->
+				<div class="bg-white rounded-lg shadow-md overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/605" alt="Coastal Destination 6">
+					<div class="p-6">
+						<h3 class="text-xl font-semibold text-gray-900">Maldives</h3>
+						<p class="mt-2 text-gray-600">
+							The Maldives, officially the Republic of Maldives, is a small archipelagic state in South Asia, situated in the Arabian Sea of the Indian Ocean. It lies southwest of Sri Lanka and India.
+						</p>
+						<a href="#" class="mt-4 inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+							Learn More
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer class="bg-gray-800 py-8 text-center text-white">
+		<p>&copy; 2023 Coastal Escape Travel. All rights reserved.</p>
+	</footer>
 </body>
 </html>
