--- a/packages.html
+++ b/packages.html
@@ -3,11 +3,131 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>Coastal_Escape_Travel</title>
+	<title>Coastal Escape Travel - Packages</title>
 	<script src='https://cdn.tailwindcss.com'></script>
 	<link rel='stylesheet' href='assets/css/style.css'>
 </head>
 <body>
-	<!-- Content for packages.html will be generated here -->
+	<nav class="bg-white shadow-md">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="flex items-center justify-between h-16">
+				<div class="flex items-center">
+					<div class="flex-shrink-0">
+						<a href="index.html"><img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg" alt="Workflow"></a>
+					</div>
+					<div class="hidden md:block">
+						<div class="ml-10 flex items-baseline space-x-4">
+							<a href="index.html" class="text-gray-600 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>
+							<a href="destinations.html" class="text-gray-600 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Destinations</a>
+							<a href="packages.html" class="bg-gray-700 text-white px-3 py-2 rounded-md text-sm font-medium">Packages</a>
+							<a href="blog.html" class="text-gray-600 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Blog</a>
+							<a href="contact.html" class="text-gray-600 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Contact</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</nav>
+
+	<header class="bg-gray-100 py-12">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+			<h1 class="text-3xl font-extrabold text-gray-900">Our Travel Packages</h1>
+			<p class="mt-3 text-lg text-gray-600">Explore our curated selection of coastal escapes and unforgettable adventures.</p>
+		</div>
+	</header>
+
+	<main class="py-12">
+		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+				<!-- Package 1 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/800/600" alt="Coastal Retreat">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Coastal Retreat Package</h2>
+						<p class="mt-2 text-gray-600">Enjoy a relaxing getaway to a serene coastal destination. This package includes luxurious accommodations, spa treatments, and gourmet dining.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$999</span>
+							<span class="text-gray-500">/person</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+
+				<!-- Package 2 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/801/600" alt="Island Adventure">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Island Adventure Package</h2>
+						<p class="mt-2 text-gray-600">Embark on an exciting island adventure with thrilling water sports, guided tours, and breathtaking views. Perfect for adrenaline junkies and nature lovers.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$1299</span>
+							<span class="text-gray-500">/person</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+
+				<!-- Package 3 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/802/600" alt="Luxury Cruise">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Luxury Cruise Package</h2>
+						<p class="mt-2 text-gray-600">Experience the ultimate in luxury and relaxation with a cruise along the stunning coastline. Enjoy world-class amenities, gourmet cuisine, and unforgettable entertainment.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$1999</span>
+							<span class="text-gray-500">/person</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+
+                <!-- Package 4 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/803/600" alt="Romantic Getaway">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Romantic Getaway Package</h2>
+						<p class="mt-2 text-gray-600">Escape with your loved one to a secluded coastal paradise. Includes private beach access, candlelit dinners, and couples massage.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$1499</span>
+							<span class="text-gray-500">/couple</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+
+                <!-- Package 5 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/804/600" alt="Family Fun Package">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Family Fun Package</h2>
+						<p class="mt-2 text-gray-600">Create lasting memories with your family on this exciting coastal adventure. Includes kid-friendly activities, spacious accommodations, and delicious meals.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$2499</span>
+							<span class="text-gray-500">/family</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+
+                <!-- Package 6 -->
+				<div class="bg-white shadow-md rounded-lg overflow-hidden">
+					<img class="w-full h-56 object-cover" src="https://picsum.photos/805/600" alt="Eco-Tourism Adventure">
+					<div class="p-6">
+						<h2 class="text-2xl font-semibold text-gray-900">Eco-Tourism Adventure</h2>
+						<p class="mt-2 text-gray-600">Explore the natural beauty of our coast with sustainable and eco-friendly tours. Learn about local wildlife and conservation efforts.</p>
+						<div class="mt-4">
+							<span class="text-xl font-bold text-gray-900">$799</span>
+							<span class="text-gray-500">/person</span>
+						</div>
+						<button class="mt-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Book Now</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="bg-gray-800 py-8 text-white text-center">
+		<p>&copy; 2023 Coastal Escape Travel. All rights reserved.</p>
+	</footer>
 </body>
 </html>
